Create Controller registerContext in IoC Container

--- a/Books/appsettings.json
+++ b/Books/appsettings.json
@@ -7,6 +7,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Books": 
-    "Server=DESKTOP-9SALBLK;Database=Books;Trusted_Connection=True;\"\""
+    "Server=./Database=Books;;\"\""
   }
 }
