--- a/Books/appsettings.json
+++ b/Books/appsettings.json
@@ -6,7 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Books": 
-    "Server=./Database=Books;;\"\""
+    "Books": "Server=DESKTOP-9SALBLK;Database=Books;Trusted_Connection=True;"
   }
 }
